# aviet-s-cec

./: CMakeLists.txt  README.md  aviete.service  main.cpp  notification-daemon.service  notify.cpp  notify.h
